Working with handlebars

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "gulp-streamify": "^1.0.2",
     "uglify-js": "^2.5.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "gulp-concat": "^2.6.0",
+    "handlebars": "^4.0.5"
   }
 }
